[Added] OC-597 #comment added openapi description to all rest connectors #time 7d